Fix filter spacing for mobile. Fix header padding.

--- a/src/app.css
+++ b/src/app.css
@@ -34,6 +34,10 @@ h1 {
 	margin-bottom: 1rem;
 }
 
+h2 {
+	margin-top: 0;
+}
+
 p {
 	font-size: clamp(.75rem, 1vw, 1rem);
 	font-family: "Inter", sans-serif;
